--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,17 +20,22 @@ file(GLOB PROJECT_SHADERS Aurora/shaders/*.comp
                           Aurora/shaders/*.frag
                           Aurora/shaders/*.geom
                           Aurora/shaders/*.vert)
+file(GLOB PROJECT_RESOURCES Aurora/resources/*)
 
 source_group("Headers" FILES ${PROJECT_HEADERS})
 source_group("Sources" FILES ${PROJECT_SOURCES})
 source_group("Vendors" FILES ${VENDORS_SOURCES})
 source_group("Shaders" FILES ${PROJECT_SHADERS})
+source_group("Resources" FILES ${PROJECT_RESOURCES})
 
 add_definitions(-DGLFW_INCLUDE_NONE
                 -DPROJECT_SOURCE_DIR=\"${PROJECT_SOURCE_DIR}\")
 
+add_compile_definitions(STB_IMAGE_IMPLEMENTATION)
+
 add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS}
-                               ${PROJECT_SHADERS} ${VENDORS_SOURCES})
+                               ${PROJECT_SHADERS} ${VENDORS_SOURCES}
+                               ${PROJECT_RESOURCES})
 
 target_link_libraries(${PROJECT_NAME} glfw opengl32
                       ${GLFW_LIBRARIES} ${GLAD_LIBRARIES})
@@ -42,3 +47,8 @@ add_custom_command(
     TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/Aurora/shaders $<TARGET_FILE_DIR:${PROJECT_NAME}>
     DEPENDS ${PROJECT_SHADERS})
+
+    add_custom_command(
+    TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/Aurora/resources $<TARGET_FILE_DIR:${PROJECT_NAME}>/resources
+    DEPENDS ${PROJECT_RESOURCES})
